@@ -10,6 +10,8 @@ Unreleased.
 - Use `inspect.getfullargspec` internally when available as
   `inspect.getargspec` is gone in 3.6
 - Added support for status code 451.
+- Improved the build error suggestions.  In particular only if
+  someone stringifies the error will the suggestions be calculated.
 
 Version 0.11.3
 --------------
